--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 					<br />
 					<input type="text" class="box" id="phno" name="phno" placeholder="Mobile" required />
 					<br />
-					<input type="text" class="box" id="password" name="password" placeholder="Password" required />
+					<input type="password" class="box" id="password" name="password" placeholder="Password" required />
 					<br />
 					<input type="submit" value="SignUp" id="signup"/>
 			    </form>
